--- a/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
@@ -4,28 +4,24 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=51_gnu
-  - bzip2=1.0.8=h998d150_6
-  - ca-certificates=2024.7.2=hd43f75c_0
-  - expat=2.6.2=h419075a_0
+  - bzip2=1.0.8=hfd63f10_2
+  - ca-certificates=2023.12.12=hd43f75c_0
   - ld_impl_linux-aarch64=2.38=h8131f2d_1
-  - libffi=3.4.4=h419075a_1
+  - libffi=3.4.4=h419075a_0
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h998d150_0
   - ncurses=6.4=h419075a_0
-  - openssl=3.0.14=h998d150_0
-  - pip=24.2=py312hd43f75c_0
-  - python=3.12.4=h8edadfe_1
+  - openssl=3.0.12=h2f4d8fa_0
+  - python=3.11.7=h4bb2201_0
   - readline=8.2=h998d150_0
-  - setuptools=72.1.0=py312hd43f75c_0
-  - sqlite=3.45.3=h998d150_0
-  - wheel=0.43.0=py312hd43f75c_0
-  - xz=5.4.6=h998d150_1
-  - zlib=1.2.13=h998d150_1
+  - sqlite=3.41.2=h998d150_0
+  - xz=5.4.5=h998d150_0
+  - zlib=1.2.13=h998d150_0
   - pip:
       - ansi2html==1.9.2
-      - arena-api==2.5.9
+      - arena-api==2.3.3
       - asttokens==2.4.1
       - attrs==24.2.0
       - av==12.3.0
@@ -74,15 +70,16 @@ dependencies:
       - googleapis-common-protos==1.63.2
       - grpcio==1.65.5
       - grpcio-status==1.65.5
+      - h5py==3.12.1
       - idna==3.7
       - imageio==2.35.1
-      - importlib-metadata==8.0.0
+      - importlib-metadata==7.0.2
       - importlib-resources==6.4.4
       - imutils==0.5.4
       - iniconfig==2.0.0
       - ipykernel==6.29.5
       - ipython==8.12.3
-      - ipywidgets==8.1.4
+      - ipywidgets==8.1.3
       - itsdangerous==2.2.0
       - jedi==0.19.1
       - jinja2==3.1.4
@@ -92,7 +89,7 @@ dependencies:
       - jupyter-client==8.6.2
       - jupyter-core==5.7.2
       - jupyterlab-pygments==0.3.0
-      - jupyterlab-widgets==3.0.12
+      - jupyterlab-widgets==3.0.11
       - kiwisolver==1.4.5
       - laspy==2.5.4
       - lazy-loader==0.4
@@ -109,7 +106,7 @@ dependencies:
       - nest-asyncio==1.6.0
       - networkx==3.3
       - numba==0.60.0
-      - numpy==1.26.4
+      - numpy==1.26.3
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
@@ -122,6 +119,7 @@ dependencies:
       - pexpect==4.9.0
       - pickleshare==0.7.5
       - pillow==10.4.0
+      - pip==24.2
       - pipreqs==0.5.0
       - platformdirs==4.2.2
       - plotly==5.23.0
@@ -144,9 +142,11 @@ dependencies:
       - pyoints==0.2.0a3
       - pyparsing==3.1.2
       - pyrsistent==0.20.0
+      - pyserial==3.5
       - pytest==8.3.2
-      - python-dateutil==2.9.0.post0
+      - python-dateutil==2.9.0
       - pytz==2024.1
+      - pyzbar==0.1.9
       - pyzmq==26.2.0
       - referencing==0.35.1
       - requests==2.32.3
@@ -154,9 +154,11 @@ dependencies:
       - rpds-py==0.20.0
       - rsa==4.9
       - ruff==0.6.1
+      - scikit-image==0.24.0
       - scikit-learn==1.5.1
       - scikit-spatial==7.2.0
       - scipy==1.14.1
+      - setuptools==73.0.1
       - shapely==2.0.6
       - six==1.16.0
       - soupsieve==2.6
@@ -176,7 +178,8 @@ dependencies:
       - wcwidth==0.2.13
       - webencodings==0.5.1
       - werkzeug==3.0.4
-      - widgetsnbextension==4.0.12
+      - wheel==0.44.0
+      - widgetsnbextension==4.0.11
       - wincertstore==0.2.1
       - wrapt==1.16.0
       - xlsxwriter==3.2.0
