--- a/architecture/Windows-x86_64/py_env_202309_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_202309_conda_env_export.yml
@@ -66,7 +66,7 @@ dependencies:
       - audioread==3.0.1
       - authlib==1.3.2
       - autograd==1.7.0
-      - autopep8==2.2.0
+      - autopep8==2.3.1
       - axial-positional-embedding==0.2.1
       - azure-common==1.1.28
       - azure-core==1.31.0
@@ -89,7 +89,7 @@ dependencies:
       - blurhash==1.1.4
       - bokeh==3.6.0
       - boltons==24.0.0
-      - boto3==1.35.38
+      - boto3==1.35.39
       - botocore==1.35.39
       - bottleneck==1.4.0
       - branca==0.8.0
@@ -153,7 +153,7 @@ dependencies:
       - crashtest==0.3.1
       - crcmod==1.7
       - croniter==3.0.3
-      - cryptography==42.0.8
+      - cryptography==43.0.1
       - cssselect2==0.7.0
       - curtsies==0.4.2
       - cvxopt==1.3.2
@@ -242,7 +242,7 @@ dependencies:
       - frozendict==2.4.5
       - frozenlist==1.4.1
       - fs==2.4.16
-      - fsspec==2024.3.1
+      - fsspec==2024.6.0
       - fst-pso==1.8.1
       - funcy==2.0
       - future==1.0.0
@@ -329,7 +329,7 @@ dependencies:
       - iniconfig==2.0.0
       - int-date==0.2.0
       - intel-cmplr-lib-ur==2024.2.1
-      - intel-openmp==2021.4.0
+      - intel-openmp==2024.2.1
       - intervaltree==3.1.0
       - intrinio-sdk==6.31.0
       - ipykernel==6.29.5
@@ -341,6 +341,9 @@ dependencies:
       - isoduration==20.11.0
       - itsdangerous==2.2.0
       - jaraco-classes==3.4.0
+      - jaraco-context==6.0.1
+      - jaraco-functools==4.1.0
+      - jaraco-text==4.0.0
       - jax==0.4.34
       - jax-jumpy==1.0.0
       - jaxlib==0.4.34
@@ -420,8 +423,8 @@ dependencies:
       - mistune==3.0.2
       - mixpanel==4.10.1
       - mizani==0.11.3
-      - mkl==2021.4.0
-      - ml-dtypes==0.3.2
+      - mkl==2024.2.2
+      - ml-dtypes==0.4.1
       - mlagents-envs==0.28.0
       - mlxtend==0.23.1
       - mock==5.1.0
@@ -667,7 +670,7 @@ dependencies:
       - scikit-image==0.24.0
       - scikit-learn==1.5.2
       - scikit-plot==0.3.7
-      - scipy==1.11.4
+      - scipy==1.13.1
       - scs==3.2.7
       - seaborn==0.13.2
       - selenium==4.25.0
@@ -734,7 +737,7 @@ dependencies:
       - tangled-up-in-unicode==0.2.0
       - tbb==2021.5.0
       - tblib==3.0.0
-      - tenacity==8.4.2
+      - tenacity==8.5.0
       - tensorboard==2.17.1
       - tensorboard-data-server==0.7.2
       - tensorboard-plugin-wit==1.8.1
@@ -816,7 +819,7 @@ dependencies:
       - waitress==3.0.0
       - wasabi==1.1.3
       - wcwidth==0.2.13
-      - weasel==0.3.4
+      - weasel==0.4.1
       - webcolors==24.8.0
       - webencodings==0.5.1
       - webob==1.8.8
