--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -11,14 +11,13 @@ dependencies:
   - tk=8.6.14=h0416ee5_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.43.0=py311haa95532_0
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
       - absl-py==2.1.0
-      - aiofiles==23.2.1
+      - aiofiles==24.1.0
       - aiohttp==3.9.5
-      - aioitertools==0.11.0
+      - aioitertools==0.12.0
       - aiosignal==1.3.1
       - aiosqlite==0.20.0
       - albucore==0.0.9
@@ -36,8 +35,8 @@ dependencies:
       - arrow==1.3.0
       - asttokens==2.4.1
       - async-lru==2.0.4
-      - attrs==23.2.0
-      - babel==2.15.0
+      - attrs==24.2.0
+      - babel==2.16.0
       - beautifulsoup4==4.12.3
       - bidict==0.23.1
       - bleach==6.1.0
@@ -45,13 +44,13 @@ dependencies:
       - blis==0.7.11
       - botocore==1.34.127
       - braincube-connector==2.6.0
-      - cachetools==5.3.3
+      - cachetools==5.5.0
       - catalogue==2.0.10
-      - certifi==2024.6.2
+      - certifi==2024.8.30
       - cffi==1.16.0
-      - charset-normalizer==3.3.2
+      - charset-normalizer==3.4.0
       - click==8.1.7
-      - cloudpathlib==0.18.1
+      - cloudpathlib==0.19.0
       - clr-loader==0.2.6
       - colorama==0.4.6
       - comm==0.2.2
@@ -63,7 +62,7 @@ dependencies:
       - dataclasses-json==0.6.7
       - datasets==2.17.1
       - db-dtypes==1.3.0
-      - debugpy==1.8.1
+      - debugpy==1.8.7
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.14
@@ -72,21 +71,21 @@ dependencies:
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
-      - dnspython==2.6.1
+      - dnspython==2.7.0
       - docker-pycreds==0.4.0
       - docstring-parser==0.16
       - docutils==0.19
       - einops==0.7.0
       - email-validator==2.1.1
-      - exceptiongroup==1.2.1
-      - executing==2.0.1
+      - exceptiongroup==1.2.2
+      - executing==2.1.0
       - fastapi==0.109.2
       - fastapi-cli==0.0.3
-      - fastjsonschema==2.19.1
-      - filelock==3.15.1
+      - fastjsonschema==2.20.0
+      - filelock==3.16.1
       - flake8==7.0.0
       - flask==3.0.3
-      - fonttools==4.53.0
+      - fonttools==4.54.1
       - fpdf2==2.7.9
       - fqdn==1.5.1
       - frozenlist==1.4.1
@@ -108,13 +107,13 @@ dependencies:
       - google-cloud-secret-manager==2.20.2
       - google-cloud-storage==2.16.0
       - google-cloud-vision==3.7.2
-      - google-crc32c==1.5.0
+      - google-crc32c==1.6.0
       - google-resumable-media==2.7.1
       - googleapis-common-protos==1.63.1
-      - graphql-core==3.2.3
-      - greenlet==3.0.3
+      - graphql-core==3.2.4
+      - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.0
-      - grpcio==1.64.1
+      - grpcio==1.66.2
       - grpcio-status==1.62.2
       - h11==0.14.0
       - h5py==3.11.0
@@ -125,7 +124,7 @@ dependencies:
       - httpx==0.27.0
       - huggingface-hub==0.23.4
       - hydra-core==1.3.0
-      - idna==3.7
+      - idna==3.10
       - ifaddr==0.2.0
       - imageio==2.34.1
       - importlib-metadata==7.1.0
@@ -167,7 +166,7 @@ dependencies:
       - kfp==2.7.0
       - kfp-pipeline-spec==0.3.0
       - kfp-server-api==2.0.5
-      - kiwisolver==1.4.5
+      - kiwisolver==1.4.7
       - kubernetes==26.1.0
       - langchain==0.1.20
       - langchain-community==0.0.38
@@ -199,13 +198,13 @@ dependencies:
       - llamaindex-py-client==0.1.19
       - llvmlite==0.43.0
       - lmdb==1.5.1
-      - lxml==5.2.2
+      - lxml==5.3.0
       - mako==1.3.5
       - marisa-trie==1.2.0
-      - markdown==3.6
+      - markdown==3.7
       - markdown-it-py==3.0.0
-      - markdown2==2.4.13
-      - markupsafe==2.1.5
+      - markdown2==2.5.1
+      - markupsafe==3.0.1
       - marshmallow==3.21.3
       - matplotlib==3.9.0
       - matplotlib-inline==0.1.7
@@ -215,7 +214,7 @@ dependencies:
       - mkl==2021.4.0
       - ml-dtypes==0.4.0
       - mpmath==1.3.0
-      - multidict==6.0.5
+      - multidict==6.1.0
       - multiprocess==0.70.16
       - murmurhash==1.0.10
       - mypy-extensions==1.0.0
@@ -223,7 +222,7 @@ dependencies:
       - nbconvert==7.16.4
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.3
+      - networkx==3.4.1
       - nicegui==1.4.25
       - nltk==3.8.1
       - notebook==7.1.3
@@ -241,7 +240,7 @@ dependencies:
       - openinference-instrumentation-langchain==0.1.22
       - openinference-instrumentation-llama-index==2.1.0
       - openinference-instrumentation-openai==0.1.8
-      - openinference-semantic-conventions==0.1.9
+      - openinference-semantic-conventions==0.1.10
       - opentelemetry-api==1.25.0
       - opentelemetry-exporter-otlp==1.25.0
       - opentelemetry-exporter-otlp-proto-common==1.25.0
@@ -252,30 +251,30 @@ dependencies:
       - opentelemetry-sdk==1.25.0
       - opentelemetry-semantic-conventions==0.46b0
       - opt-einsum==3.3.0
-      - orjson==3.10.5
+      - orjson==3.10.7
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.1.4
       - pandas-gbq==0.23.1
       - pandocfilters==1.5.1
       - parso==0.8.4
-      - persist-queue==0.8.1
-      - pillow==10.3.0
+      - persist-queue==1.0.0
+      - pillow==10.4.0
       - pip==24.2
-      - platformdirs==4.2.2
+      - platformdirs==4.3.6
       - pluggy==1.5.0
       - ply==3.11
       - preshed==3.0.9
-      - prometheus-client==0.20.0
+      - prometheus-client==0.21.0
       - prompt-toolkit==3.0.47
       - proto-plus==1.23.0
       - protobuf==4.25.3
       - pscript==0.7.7
-      - psutil==5.9.8
-      - pure-eval==0.2.2
+      - psutil==6.0.0
+      - pure-eval==0.2.3
       - pyarrow==16.1.0
       - pyarrow-hotfix==0.6
-      - pyasn1==0.6.0
+      - pyasn1==0.6.1
       - pyasn1-modules==0.4.0
       - pycodestyle==2.11.1
       - pycparser==2.22
@@ -285,8 +284,8 @@ dependencies:
       - pydeck==0.9.1
       - pyflakes==3.2.0
       - pygments==2.18.0
-      - pyparsing==3.1.2
-      - pypdf==4.2.0
+      - pyparsing==3.1.4
+      - pypdf==4.3.1
       - pypng==0.20220715.0
       - pyqtree==1.0.0
       - pytest==8.2.2
@@ -294,20 +293,20 @@ dependencies:
       - python-dotenv==1.0.0
       - python-engineio==4.9.1
       - python-json-logger==2.0.7
-      - python-multipart==0.0.9
+      - python-multipart==0.0.12
       - python-socketio==5.11.2
       - pythonnet==3.0.3
       - pytorch-lightning==2.4.0
-      - pytz==2024.1
-      - pywin32==306
+      - pytz==2024.2
+      - pywin32==307
       - pywinpty==2.0.13
-      - pyyaml==6.0.1
+      - pyyaml==6.0.2
       - pyzbar==0.1.9
-      - pyzmq==26.0.3
+      - pyzmq==26.2.0
       - qrcode==7.4.2
       - qudida==0.0.4
       - referencing==0.35.1
-      - regex==2024.5.15
+      - regex==2024.9.11
       - replicate==0.26.0
       - requests==2.32.3
       - requests-oauthlib==2.0.0
@@ -315,10 +314,10 @@ dependencies:
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
       - rich==13.7.1
-      - rpds-py==0.18.1
+      - rpds-py==0.20.0
       - rsa==4.9
-      - ruff==0.4.9
-      - safetensors==0.4.4
+      - ruff==0.6.9
+      - safetensors==0.4.5
       - scikit-image==0.23.2
       - scikit-learn==1.5.0
       - scipy==1.11.4
@@ -326,7 +325,7 @@ dependencies:
       - send2trash==1.8.3
       - sentry-sdk==2.5.1
       - setproctitle==1.3.3
-      - setuptools==70.0.0
+      - setuptools==75.1.0
       - shapely==2.0.4
       - shellingham==1.5.4
       - simple-websocket==1.0.0
@@ -335,7 +334,7 @@ dependencies:
       - smmap==5.0.1
       - snakeviz==2.2.0
       - sniffio==1.3.1
-      - soupsieve==2.5
+      - soupsieve==2.6
       - spacy==3.7.5
       - spacy-legacy==3.0.12
       - spacy-loggers==1.0.5
@@ -350,7 +349,7 @@ dependencies:
       - sympy==1.12.1
       - tabulate==0.9.0
       - tbb==2021.12.0
-      - tenacity==8.3.0
+      - tenacity==8.4.2
       - tensorboard==2.17.1
       - tensorboard-data-server==0.7.2
       - terminado==0.18.1
@@ -361,7 +360,7 @@ dependencies:
       - tinycss2==1.3.0
       - toga-core==0.4.5
       - toml==0.10.2
-      - tomli==2.0.1
+      - tomli==2.0.2
       - toolz==0.12.1
       - torch==2.4.1+cu124
       - torchaudio==2.4.1+cu124
@@ -373,10 +372,10 @@ dependencies:
       - travertino==0.3.0
       - typeguard==2.13.3
       - typer==0.12.3
-      - types-python-dateutil==2.9.0.20240316
+      - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
-      - tzdata==2024.1
+      - tzdata==2024.2
       - tzlocal==5.2
       - ujson==5.10.0
       - uni2ts==1.1.0
@@ -384,24 +383,25 @@ dependencies:
       - uritemplate==4.1.1
       - urllib3==1.26.18
       - uvicorn==0.30.1
-      - validators==0.28.3
+      - validators==0.34.0
       - vbuild==0.8.2
       - wandb==0.17.0
       - wasabi==1.1.3
-      - watchdog==4.0.1
+      - watchdog==5.0.3
       - watchfiles==0.22.0
       - wcwidth==0.2.13
       - weasel==0.4.1
-      - webcolors==24.6.0
+      - webcolors==24.8.0
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - websockets==12.0
+      - websockets==13.1
       - werkzeug==3.0.3
+      - wheel==0.44.0
       - wrapt==1.16.0
       - wsproto==1.2.0
       - xlsxwriter==3.2.0
       - xxhash==3.5.0
       - yarl==1.9.4
-      - yoctopuce==2.0.61305
-      - zipp==3.19.2
+      - yoctopuce==2.0.62875
+      - zipp==3.20.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
