--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -16,17 +16,18 @@ dependencies:
   - pip:
       - absl-py==2.1.0
       - aiofiles==24.1.0
-      - aiohttp==3.9.5
+      - aiohappyeyeballs==2.4.3
+      - aiohttp==3.10.10
       - aioitertools==0.12.0
       - aiosignal==1.3.1
       - aiosqlite==0.20.0
-      - albucore==0.0.9
+      - albucore==0.0.17
       - albumentations==1.4.8
-      - alembic==1.13.2
+      - alembic==1.13.3
       - altair==5.3.0
       - annotated-types==0.7.0
       - antlr4-python3-runtime==4.9.3
-      - anyio==4.4.0
+      - anyio==4.6.0
       - appdirs==1.4.4
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
@@ -37,17 +38,18 @@ dependencies:
       - async-lru==2.0.4
       - attrs==24.2.0
       - babel==2.16.0
+      - backports-tarfile==1.2.0
       - beautifulsoup4==4.12.3
       - bidict==0.23.1
       - bleach==6.1.0
       - blinker==1.8.2
       - blis==0.7.11
-      - botocore==1.34.127
+      - botocore==1.35.39
       - braincube-connector==2.6.0
       - cachetools==5.5.0
       - catalogue==2.0.10
       - certifi==2024.8.30
-      - cffi==1.16.0
+      - cffi==1.17.1
       - charset-normalizer==3.4.0
       - click==8.1.7
       - cloudpathlib==0.19.0
@@ -55,10 +57,10 @@ dependencies:
       - colorama==0.4.6
       - comm==0.2.2
       - confection==0.1.5
-      - contourpy==1.2.1
+      - contourpy==1.3.0
       - cycler==0.12.1
       - cymem==2.0.8
-      - cython==0.29.37
+      - cython==3.0.11
       - dataclasses-json==0.6.7
       - datasets==2.17.1
       - db-dtypes==1.3.0
@@ -75,27 +77,27 @@ dependencies:
       - docker-pycreds==0.4.0
       - docstring-parser==0.16
       - docutils==0.19
-      - einops==0.7.0
-      - email-validator==2.1.1
+      - einops==0.8.0
+      - email-validator==2.2.0
       - exceptiongroup==1.2.2
       - executing==2.1.0
       - fastapi==0.109.2
       - fastapi-cli==0.0.3
       - fastjsonschema==2.20.0
       - filelock==3.16.1
-      - flake8==7.0.0
+      - flake8==7.1.1
       - flask==3.0.3
       - fonttools==4.54.1
-      - fpdf2==2.7.9
+      - fpdf2==2.8.1
       - fqdn==1.5.1
       - frozenlist==1.4.1
       - fsspec==2023.10.0
       - gitdb==4.0.11
       - gitpython==3.1.43
-      - gluonts==0.14.4
+      - gluonts==0.15.1
       - google-api-core==2.19.0
       - google-api-python-client==2.135.0
-      - google-auth==2.30.0
+      - google-auth==2.35.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.0
       - google-cloud-aiplatform==1.51.0
@@ -108,49 +110,52 @@ dependencies:
       - google-cloud-storage==2.16.0
       - google-cloud-vision==3.7.2
       - google-crc32c==1.6.0
-      - google-resumable-media==2.7.1
-      - googleapis-common-protos==1.63.1
+      - google-resumable-media==2.7.2
+      - googleapis-common-protos==1.65.0
       - graphql-core==3.2.4
       - greenlet==3.1.1
-      - grpc-google-iam-v1==0.13.0
+      - grpc-google-iam-v1==0.13.1
       - grpcio==1.66.2
       - grpcio-status==1.62.2
       - h11==0.14.0
-      - h5py==3.11.0
-      - hdbscan==0.8.37
+      - h5py==3.12.1
       - httpcore==1.0.5
       - httplib2==0.22.0
       - httptools==0.6.1
-      - httpx==0.27.0
-      - huggingface-hub==0.23.4
-      - hydra-core==1.3.0
+      - httpx==0.27.2
+      - huggingface-hub==0.25.2
+      - hydra-core==1.3.2
       - idna==3.10
       - ifaddr==0.2.0
-      - imageio==2.34.1
+      - imageio==2.35.1
       - importlib-metadata==7.1.0
+      - importlib-resources==6.4.5
       - imutils==0.5.4
+      - inflect==7.4.0
       - iniconfig==2.0.0
-      - intel-openmp==2021.4.0
+      - intel-cmplr-lib-ur==2024.2.1
+      - intel-openmp==2024.2.1
       - ipykernel==6.29.4
       - ipython==8.25.0
       - ipython-genutils==0.2.0
       - isoduration==20.11.0
       - itsdangerous==2.2.0
+      - jaraco-context==6.0.1
+      - jaraco-functools==4.1.0
       - jax==0.4.31
       - jaxlib==0.4.31
-      - jaxtyping==0.2.34
       - jedi==0.19.1
       - jinja2==3.1.4
       - jmespath==1.0.1
       - joblib==1.4.2
-      - json-numpy==2.0.0
+      - json-numpy==2.1.0
       - json5==0.9.25
       - jsonpatch==1.33
-      - jsonpath-ng==1.6.1
+      - jsonpath-ng==1.7.0
       - jsonpointer==3.0.0
       - jsonschema==4.22.0
-      - jsonschema-specifications==2023.12.1
-      - jupyter-client==8.6.2
+      - jsonschema-specifications==2024.10.1
+      - jupyter-client==8.6.3
       - jupyter-contrib-core==0.4.2
       - jupyter-contrib-nbextensions==0.7.0
       - jupyter-core==5.7.2
@@ -178,7 +183,7 @@ dependencies:
       - language-data==1.2.0
       - lazy-loader==0.4
       - lightning==2.4.0
-      - lightning-utilities==0.11.6
+      - lightning-utilities==0.11.7
       - llama-cpp-python==0.2.78
       - llama-index==0.10.37
       - llama-index-agent-openai==0.2.5
@@ -200,19 +205,20 @@ dependencies:
       - lmdb==1.5.1
       - lxml==5.3.0
       - mako==1.3.5
-      - marisa-trie==1.2.0
+      - marisa-trie==1.2.1
       - markdown==3.7
       - markdown-it-py==3.0.0
       - markdown2==2.5.1
       - markupsafe==3.0.1
-      - marshmallow==3.21.3
+      - marshmallow==3.22.0
       - matplotlib==3.9.0
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
       - mistune==3.0.2
-      - mkl==2021.4.0
-      - ml-dtypes==0.4.0
+      - mkl==2024.2.2
+      - ml-dtypes==0.5.0
+      - more-itertools==10.5.0
       - mpmath==1.3.0
       - multidict==6.1.0
       - multiprocess==0.70.16
@@ -233,9 +239,9 @@ dependencies:
       - ollama==0.2.1
       - omegaconf==2.3.0
       - openai==1.34.0
-      - opencv-contrib-python==4.10.0.82
+      - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
-      - opencv-python-headless==4.10.0.82
+      - opencv-python-headless==4.10.0.84
       - openinference-instrumentation==0.1.8
       - openinference-instrumentation-langchain==0.1.22
       - openinference-instrumentation-llama-index==2.1.0
@@ -250,7 +256,7 @@ dependencies:
       - opentelemetry-proto==1.25.0
       - opentelemetry-sdk==1.25.0
       - opentelemetry-semantic-conventions==0.46b0
-      - opt-einsum==3.3.0
+      - opt-einsum==3.4.0
       - orjson==3.10.7
       - overrides==7.7.0
       - packaging==23.2
@@ -266,17 +272,18 @@ dependencies:
       - ply==3.11
       - preshed==3.0.9
       - prometheus-client==0.21.0
-      - prompt-toolkit==3.0.47
-      - proto-plus==1.23.0
+      - prompt-toolkit==3.0.48
+      - propcache==0.2.0
+      - proto-plus==1.24.0
       - protobuf==4.25.3
       - pscript==0.7.7
       - psutil==6.0.0
       - pure-eval==0.2.3
-      - pyarrow==16.1.0
+      - pyarrow==17.0.0
       - pyarrow-hotfix==0.6
       - pyasn1==0.6.1
-      - pyasn1-modules==0.4.0
-      - pycodestyle==2.11.1
+      - pyasn1-modules==0.4.1
+      - pycodestyle==2.12.1
       - pycparser==2.22
       - pydantic==2.7.4
       - pydantic-core==2.18.4
@@ -288,9 +295,9 @@ dependencies:
       - pypdf==4.3.1
       - pypng==0.20220715.0
       - pyqtree==1.0.0
-      - pytest==8.2.2
+      - pytest==8.3.3
       - python-dateutil==2.9.0.post0
-      - python-dotenv==1.0.0
+      - python-dotenv==1.0.1
       - python-engineio==4.9.1
       - python-json-logger==2.0.7
       - python-multipart==0.0.12
@@ -298,12 +305,12 @@ dependencies:
       - pythonnet==3.0.3
       - pytorch-lightning==2.4.0
       - pytz==2024.2
-      - pywin32==307
+      - pywin32==308
       - pywinpty==2.0.13
       - pyyaml==6.0.2
       - pyzbar==0.1.9
       - pyzmq==26.2.0
-      - qrcode==7.4.2
+      - qrcode==8.0
       - qudida==0.0.4
       - referencing==0.35.1
       - regex==2024.9.11
@@ -320,17 +327,17 @@ dependencies:
       - safetensors==0.4.5
       - scikit-image==0.23.2
       - scikit-learn==1.5.0
-      - scipy==1.11.4
+      - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
-      - sentry-sdk==2.5.1
+      - sentry-sdk==2.16.0
       - setproctitle==1.3.3
       - setuptools==75.1.0
-      - shapely==2.0.4
+      - shapely==2.0.6
       - shellingham==1.5.4
       - simple-websocket==1.0.0
       - six==1.16.0
-      - smart-open==7.0.4
+      - smart-open==7.0.5
       - smmap==5.0.1
       - snakeviz==2.2.0
       - sniffio==1.3.1
@@ -338,7 +345,7 @@ dependencies:
       - spacy==3.7.5
       - spacy-legacy==3.0.12
       - spacy-loggers==1.0.5
-      - sqlalchemy==2.0.30
+      - sqlalchemy==2.0.35
       - sqlean-py==3.45.1
       - srsly==2.4.8
       - stack-data==0.6.3
@@ -346,19 +353,19 @@ dependencies:
       - strawberry-graphql==0.235.0
       - streamlit==1.34.0
       - striprtf==0.0.26
-      - sympy==1.12.1
+      - sympy==1.13.3
       - tabulate==0.9.0
       - tbb==2021.12.0
-      - tenacity==8.4.2
+      - tenacity==8.5.0
       - tensorboard==2.17.1
       - tensorboard-data-server==0.7.2
       - terminado==0.18.1
       - thinc==8.2.3
       - threadpoolctl==3.5.0
-      - tifffile==2024.5.22
+      - tifffile==2024.9.20
       - tiktoken==0.7.0
       - tinycss2==1.3.0
-      - toga-core==0.4.5
+      - toga-core==0.4.7
       - toml==0.10.2
       - tomli==2.0.2
       - toolz==0.12.1
@@ -367,10 +374,10 @@ dependencies:
       - torchmetrics==1.4.1
       - torchvision==0.19.1+cu124
       - tornado==6.4.1
-      - tqdm==4.66.4
+      - tqdm==4.66.5
       - traitlets==5.14.3
       - travertino==0.3.0
-      - typeguard==2.13.3
+      - typeguard==4.3.0
       - typer==0.12.3
       - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
@@ -378,7 +385,6 @@ dependencies:
       - tzdata==2024.2
       - tzlocal==5.2
       - ujson==5.10.0
-      - uni2ts==1.1.0
       - uri-template==1.3.0
       - uritemplate==4.1.1
       - urllib3==1.26.18
@@ -395,13 +401,13 @@ dependencies:
       - webencodings==0.5.1
       - websocket-client==1.8.0
       - websockets==13.1
-      - werkzeug==3.0.3
+      - werkzeug==3.0.4
       - wheel==0.44.0
       - wrapt==1.16.0
       - wsproto==1.2.0
       - xlsxwriter==3.2.0
       - xxhash==3.5.0
-      - yarl==1.9.4
+      - yarl==1.15.0
       - yoctopuce==2.0.62875
       - zipp==3.20.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
