--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -22,17 +22,17 @@ dependencies:
       - aiosignal==1.3.1
       - aiosqlite==0.20.0
       - albucore==0.0.17
-      - albumentations==1.4.8
+      - albumentations==1.4.18
       - alembic==1.13.3
-      - altair==5.3.0
+      - altair==5.4.1
       - annotated-types==0.7.0
       - antlr4-python3-runtime==4.9.3
-      - anyio==4.6.0
+      - anyio==4.6.1
       - appdirs==1.4.4
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
-      - arize-phoenix-evals==0.14.1
+      - arize-phoenix-evals==0.17.0
       - arrow==1.3.0
       - asttokens==2.4.1
       - async-lru==2.0.4
@@ -62,7 +62,7 @@ dependencies:
       - cymem==2.0.8
       - cython==3.0.11
       - dataclasses-json==0.6.7
-      - datasets==2.17.1
+      - datasets==3.0.1
       - db-dtypes==1.3.0
       - debugpy==1.8.7
       - decorator==5.1.1
@@ -76,13 +76,15 @@ dependencies:
       - dnspython==2.7.0
       - docker-pycreds==0.4.0
       - docstring-parser==0.16
-      - docutils==0.19
+      - docutils==0.21.2
+      - durationpy==0.9
       - einops==0.8.0
       - email-validator==2.2.0
+      - eval-type-backport==0.2.0
       - exceptiongroup==1.2.2
       - executing==2.1.0
-      - fastapi==0.109.2
-      - fastapi-cli==0.0.3
+      - fastapi==0.115.2
+      - fastapi-cli==0.0.5
       - fastjsonschema==2.20.0
       - filelock==3.16.1
       - flake8==7.1.1
@@ -91,28 +93,28 @@ dependencies:
       - fpdf2==2.8.1
       - fqdn==1.5.1
       - frozenlist==1.4.1
-      - fsspec==2023.10.0
+      - fsspec==2023.12.1
       - gitdb==4.0.11
       - gitpython==3.1.43
       - gluonts==0.15.1
-      - google-api-core==2.19.0
+      - google-api-core==2.21.0
       - google-api-python-client==2.135.0
       - google-auth==2.35.0
       - google-auth-httplib2==0.2.0
-      - google-auth-oauthlib==1.2.0
-      - google-cloud-aiplatform==1.51.0
-      - google-cloud-bigquery==3.22.0
-      - google-cloud-compute==1.19.0
+      - google-auth-oauthlib==1.2.1
+      - google-cloud-aiplatform==1.70.0
+      - google-cloud-bigquery==3.26.0
+      - google-cloud-compute==1.19.2
       - google-cloud-core==2.4.1
-      - google-cloud-pipeline-components==2.14.0
-      - google-cloud-resource-manager==1.12.3
+      - google-cloud-pipeline-components==2.17.0
+      - google-cloud-resource-manager==1.12.5
       - google-cloud-secret-manager==2.20.2
-      - google-cloud-storage==2.16.0
-      - google-cloud-vision==3.7.2
+      - google-cloud-storage==2.18.2
+      - google-cloud-vision==3.7.4
       - google-crc32c==1.6.0
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.65.0
-      - graphql-core==3.2.4
+      - graphql-core==3.2.5
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.13.1
       - grpcio==1.66.2
@@ -135,17 +137,19 @@ dependencies:
       - iniconfig==2.0.0
       - intel-cmplr-lib-ur==2024.2.1
       - intel-openmp==2024.2.1
-      - ipykernel==6.29.4
-      - ipython==8.25.0
+      - ipykernel==6.29.5
+      - ipython==8.28.0
       - ipython-genutils==0.2.0
       - isoduration==20.11.0
       - itsdangerous==2.2.0
       - jaraco-context==6.0.1
       - jaraco-functools==4.1.0
-      - jax==0.4.31
-      - jaxlib==0.4.31
+      - jaraco-text==4.0.0
+      - jax==0.4.34
+      - jaxlib==0.4.34
       - jedi==0.19.1
       - jinja2==3.1.4
+      - jiter==0.6.1
       - jmespath==1.0.1
       - joblib==1.4.2
       - json-numpy==2.1.0
@@ -153,7 +157,7 @@ dependencies:
       - jsonpatch==1.33
       - jsonpath-ng==1.7.0
       - jsonpointer==3.0.0
-      - jsonschema==4.22.0
+      - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
       - jupyter-client==8.6.3
       - jupyter-contrib-core==0.4.2
@@ -162,12 +166,12 @@ dependencies:
       - jupyter-events==0.10.0
       - jupyter-highlight-selected-word==0.2.0
       - jupyter-lsp==2.2.5
-      - jupyter-nbextensions-configurator==0.6.3
-      - jupyter-server==2.14.0
+      - jupyter-nbextensions-configurator==0.6.4
+      - jupyter-server==2.14.2
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.1.8
+      - jupyterlab==4.2.5
       - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.27.1
+      - jupyterlab-server==2.27.3
       - kfp==2.7.0
       - kfp-pipeline-spec==0.3.0
       - kfp-server-api==2.0.5
@@ -178,28 +182,29 @@ dependencies:
       - langchain-core==0.1.52
       - langchain-openai==0.1.6
       - langchain-text-splitters==0.0.1
-      - langcodes==3.4.0
-      - langsmith==0.1.77
+      - langcodes==3.4.1
+      - langsmith==0.1.126
       - language-data==1.2.0
       - lazy-loader==0.4
       - lightning==2.4.0
       - lightning-utilities==0.11.7
-      - llama-cpp-python==0.2.78
-      - llama-index==0.10.37
-      - llama-index-agent-openai==0.2.5
-      - llama-index-cli==0.1.12
-      - llama-index-core==0.10.36
+      - llama-cloud==0.1.2
+      - llama-cpp-python==0.3.1
+      - llama-index==0.10.59
+      - llama-index-agent-openai==0.2.6
+      - llama-index-cli==0.1.13
+      - llama-index-core==0.10.59
       - llama-index-embeddings-openai==0.1.9
-      - llama-index-indices-managed-llama-cloud==0.1.6
+      - llama-index-indices-managed-llama-cloud==0.2.7
       - llama-index-legacy==0.9.48
-      - llama-index-llms-ollama==0.1.3
-      - llama-index-llms-openai==0.1.19
-      - llama-index-multi-modal-llms-openai==0.1.6
-      - llama-index-program-openai==0.1.6
+      - llama-index-llms-ollama==0.1.6
+      - llama-index-llms-openai==0.1.29
+      - llama-index-multi-modal-llms-openai==0.1.8
+      - llama-index-program-openai==0.1.7
       - llama-index-question-gen-openai==0.1.3
-      - llama-index-readers-file==0.1.22
-      - llama-index-readers-llama-parse==0.1.4
-      - llama-parse==0.4.3
+      - llama-index-readers-file==0.1.28
+      - llama-index-readers-llama-parse==0.1.6
+      - llama-parse==0.4.9
       - llamaindex-py-client==0.1.19
       - llvmlite==0.43.0
       - lmdb==1.5.1
@@ -211,7 +216,7 @@ dependencies:
       - markdown2==2.5.1
       - markupsafe==3.0.1
       - marshmallow==3.22.0
-      - matplotlib==3.9.0
+      - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
@@ -224,43 +229,44 @@ dependencies:
       - multiprocess==0.70.16
       - murmurhash==1.0.10
       - mypy-extensions==1.0.0
+      - narwhals==1.9.3
       - nbclient==0.10.0
       - nbconvert==7.16.4
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
       - networkx==3.4.1
-      - nltk==3.8.1
-      - notebook==7.1.3
+      - nltk==3.9.1
+      - notebook==7.2.2
       - notebook-shim==0.2.4
       - numba==0.60.0
       - numpy==1.26.4
       - oauthlib==3.2.2
-      - ollama==0.2.1
+      - ollama==0.3.3
       - omegaconf==2.3.0
-      - openai==1.34.0
+      - openai==1.51.2
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
-      - openinference-instrumentation==0.1.8
-      - openinference-instrumentation-langchain==0.1.22
-      - openinference-instrumentation-llama-index==2.1.0
-      - openinference-instrumentation-openai==0.1.8
+      - openinference-instrumentation==0.1.18
+      - openinference-instrumentation-langchain==0.1.28
+      - openinference-instrumentation-llama-index==3.0.2
+      - openinference-instrumentation-openai==0.1.14
       - openinference-semantic-conventions==0.1.10
-      - opentelemetry-api==1.25.0
-      - opentelemetry-exporter-otlp==1.25.0
-      - opentelemetry-exporter-otlp-proto-common==1.25.0
-      - opentelemetry-exporter-otlp-proto-grpc==1.25.0
-      - opentelemetry-exporter-otlp-proto-http==1.25.0
-      - opentelemetry-instrumentation==0.46b0
-      - opentelemetry-proto==1.25.0
-      - opentelemetry-sdk==1.25.0
-      - opentelemetry-semantic-conventions==0.46b0
+      - opentelemetry-api==1.27.0
+      - opentelemetry-exporter-otlp==1.27.0
+      - opentelemetry-exporter-otlp-proto-common==1.27.0
+      - opentelemetry-exporter-otlp-proto-grpc==1.27.0
+      - opentelemetry-exporter-otlp-proto-http==1.27.0
+      - opentelemetry-instrumentation==0.48b0
+      - opentelemetry-proto==1.27.0
+      - opentelemetry-sdk==1.27.0
+      - opentelemetry-semantic-conventions==0.48b0
       - opt-einsum==3.4.0
       - orjson==3.10.7
       - overrides==7.7.0
       - packaging==23.2
-      - pandas==2.1.4
-      - pandas-gbq==0.23.1
+      - pandas==2.2.3
+      - pandas-gbq==0.23.2
       - pandocfilters==1.5.1
       - parso==0.8.4
       - persist-queue==1.0.0
@@ -284,13 +290,14 @@ dependencies:
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pycparser==2.22
-      - pydantic==2.7.4
-      - pydantic-core==2.18.4
+      - pydantic==2.9.2
+      - pydantic-core==2.23.4
+      - pydantic-settings==2.5.2
       - pydata-google-auth==1.8.2
       - pydeck==0.9.1
       - pyflakes==3.2.0
       - pygments==2.18.0
-      - pyparsing==3.1.4
+      - pyparsing==3.2.0
       - pypdf==4.3.1
       - pypng==0.20220715.0
       - pyqtree==1.0.0
@@ -300,8 +307,8 @@ dependencies:
       - python-engineio==4.9.1
       - python-json-logger==2.0.7
       - python-multipart==0.0.12
-      - python-socketio==5.11.2
-      - pythonnet==3.0.3
+      - python-socketio==5.11.4
+      - pythonnet==3.0.4
       - pytorch-lightning==2.4.0
       - pytz==2024.2
       - pywin32==308
@@ -313,19 +320,19 @@ dependencies:
       - qudida==0.0.4
       - referencing==0.35.1
       - regex==2024.9.11
-      - replicate==0.26.0
+      - replicate==1.0.1
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - requests-toolbelt==0.10.1
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rich==13.7.1
+      - rich==13.9.2
       - rpds-py==0.20.0
       - rsa==4.9
       - ruff==0.6.9
       - safetensors==0.4.5
-      - scikit-image==0.23.2
-      - scikit-learn==1.5.0
+      - scikit-image==0.24.0
+      - scikit-learn==1.5.2
       - scipy==1.14.1
       - segment-anything==1.0
       - send2trash==1.8.3
@@ -334,35 +341,35 @@ dependencies:
       - setuptools==75.1.0
       - shapely==2.0.6
       - shellingham==1.5.4
-      - simple-websocket==1.0.0
+      - simple-websocket==1.1.0
       - six==1.16.0
       - smart-open==7.0.5
       - smmap==5.0.1
       - snakeviz==2.2.0
       - sniffio==1.3.1
       - soupsieve==2.6
-      - spacy==3.7.5
+      - spacy==3.8.0
       - spacy-legacy==3.0.12
       - spacy-loggers==1.0.5
       - sqlalchemy==2.0.35
       - sqlean-py==3.45.1
       - srsly==2.4.8
       - stack-data==0.6.3
-      - starlette==0.36.3
-      - strawberry-graphql==0.235.0
-      - streamlit==1.34.0
+      - starlette==0.39.2
+      - strawberry-graphql==0.246.2
+      - streamlit==1.39.0
       - striprtf==0.0.26
       - sympy==1.13.3
       - tabulate==0.9.0
       - tbb==2021.12.0
       - tenacity==8.5.0
-      - tensorboard==2.17.1
+      - tensorboard==2.18.0
       - tensorboard-data-server==0.7.2
       - terminado==0.18.1
       - thinc==8.2.3
       - threadpoolctl==3.5.0
       - tifffile==2024.9.20
-      - tiktoken==0.7.0
+      - tiktoken==0.8.0
       - tinycss2==1.3.0
       - toga-core==0.4.7
       - toml==0.10.2
@@ -370,14 +377,14 @@ dependencies:
       - toolz==0.12.1
       - torch==2.4.1+cu124
       - torchaudio==2.4.1+cu124
-      - torchmetrics==1.4.1
+      - torchmetrics==1.4.3
       - torchvision==0.19.1+cu124
       - tornado==6.4.1
       - tqdm==4.66.5
       - traitlets==5.14.3
       - travertino==0.3.0
       - typeguard==4.3.0
-      - typer==0.12.3
+      - typer==0.12.5
       - types-python-dateutil==2.9.0.20241003
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
@@ -387,13 +394,13 @@ dependencies:
       - uri-template==1.3.0
       - uritemplate==4.1.1
       - urllib3==1.26.18
-      - uvicorn==0.30.1
+      - uvicorn==0.31.1
       - validators==0.34.0
       - vbuild==0.8.2
-      - wandb==0.17.0
+      - wandb==0.18.3
       - wasabi==1.1.3
       - watchdog==5.0.3
-      - watchfiles==0.22.0
+      - watchfiles==0.24.0
       - wcwidth==0.2.13
       - weasel==0.4.1
       - webcolors==24.8.0
@@ -406,7 +413,7 @@ dependencies:
       - wsproto==1.2.0
       - xlsxwriter==3.2.0
       - xxhash==3.5.0
-      - yarl==1.15.0
+      - yarl==1.15.1
       - yoctopuce==2.0.62875
       - zipp==3.20.2
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
